--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/scalatest_2.12-3.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/scalatest-app_2.12-3.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/jline-2.14.4.jar"/>
