--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src/test/scala"/>
+	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_181"/>
 	<classpathentry kind="lib" path="lib/scalatest_2.12-3.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/scalatest-app_2.12-3.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/jline-2.14.4.jar"/>
@@ -16,5 +17,11 @@
 	<classpathentry kind="lib" path="lib/jogl-all.jar"/>
 	<classpathentry kind="lib" path="lib/jogl-test.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-library/2.12.3/scala-library-2.12.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-library/2.12.3/scala-library-2.12.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-library/2.12.3/scala-library-2.12.3-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-compiler/2.12.3/scala-compiler-2.12.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-compiler/2.12.3/scala-compiler-2.12.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Thinkpad/.m2/repository/org/scala-lang/scala-compiler/2.12.3/scala-compiler-2.12.3-sources.jar"/>
+	<classpathentry kind="output" path="target"/>
 </classpath>
