--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,14 @@
 	</properties>
 
 	<dependencies>
+
 		<dependency>
 			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
+			<artifactId>scala-library-all</artifactId>
 			<version>${scala.version}</version>
+			<type>pom</type>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.scalatest</groupId>
 			<artifactId>scalatest_2.12</artifactId>
@@ -34,10 +36,8 @@
 		</dependency>
 
 
-		<!-- JUnit5 minimum dependencies (api, engine, params, launcher) 
-			===> NOT SUPPORTED YET <====
-				<dependency> 
-			<groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-api</artifactId> 
+		<!-- JUnit5 minimum dependencies (api, engine, params, launcher) ===> NOT 
+			SUPPORTED YET <==== <dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-api</artifactId> 
 			<version>${junit.jupiter.version}</version> <scope>test</scope> </dependency> 
 			<dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-engine</artifactId> 
 			<version>${junit.jupiter.version}</version> <scope>test</scope> </dependency> 
