--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,9 @@
 			<version>1.3.0</version> <scope>test</scope> </dependency> -->
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>[4.13.1,)</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>org.scala-js</groupId> <artifactId>scalajs-junit-test-runtime_2.12</artifactId> 
